🚧 First inclusion of custom icons

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -55,6 +55,10 @@ flutter:
   # "family" key with the font family name, and a "fonts" key with a
   # list giving the asset and other descriptors for the font. For
   # example:
+  fonts:
+    - family:  AUMIcons
+      fonts:
+       - asset: fonts/AUMIcons.ttf
   # fonts:
   #   - family: Schyler
   #     fonts:
