--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -26,9 +26,9 @@ dependencies:
   flutter:
     sdk: flutter
   flutter_feather_icons: ^2.0.0+1
+  flutter_riverpod: ^1.0.0-dev.9
   google_fonts: ^2.1.0
   http: ^0.13.3
-  provider: ^5.0.0
   shared_preferences: ^2.0.6
 
 dev_dependencies:
