✨ Complete cat adoption and view cat pages

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,6 +23,7 @@ environment:
 dependencies:
   cupertino_icons: ^1.0.2
   dotted_border: ^2.0.0+1
+  file_picker: ^4.1.4
   flutter:
     sdk: flutter
   flutter_feather_icons: ^2.0.0+1
