--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,6 +30,7 @@ dependencies:
   flutter_riverpod: ^1.0.0-dev.9
   google_fonts: ^2.1.0
   http: ^0.13.3
+  intl: ^0.17.0
   shared_preferences: ^2.0.6
 
 dev_dependencies:
